Add ansible config for tape library - Add config in ansible - Fix: FSProvider check that at least one referent offer must exists - FSProvider check that asyncRead offer must not be definied as referent offer - Move tape configuration from offer-tape.conf to default-storage.conf - Tape factory now accept directly TapeLibraryConfiguration as params in initialize method instead of loading config

--- a/deployment/ansible-vitam/vitam.yml
+++ b/deployment/ansible-vitam/vitam.yml
@@ -127,6 +127,7 @@
 - hosts: hosts-storage-offer-default
   any_errors_fatal: true
   roles:
+    - simulate_tape
     - vitam
   vars:
     vitam_struct: "{{ vitam.storageofferdefault }}"
