--- a/sources/storage/cas-manager/cas-tape-library/src/test/resources/offer-tape-test.conf
+++ b/sources/storage/cas-manager/cas-tape-library/src/test/resources/offer-tape-test.conf
@@ -6,7 +6,7 @@ maxTarFileSize: 1000000
 
 topology:
   fileBuckets:
-    metadata: ['units', 'objectGroup']
+    metadata: ['unit', 'objectGroup']
     objects: ['object']
     default: []
   buckets:
