--- a/deployment/environments/group_vars/all/offers_opts.yml
+++ b/deployment/environments/group_vars/all/offers_opts.yml
@@ -3,6 +3,7 @@
 vitam_strategy:
   - name: offer-fs-1
     referent: true
+    asyncRead: false
 # status : enable (value=ACTIVE, default value) or disable (value=INACTIVE) this offer
 #    status: ACTIVE
 #    vitam_site_name: prod-dc2
@@ -20,6 +21,8 @@ vitam_offers:
   offer-fs-1:
     # param can be filesystem-hash (recomended) or filesystem (not recomended)
     provider: filesystem-hash
+  offer-tape-1:
+    provider: tape-library
   offer-swift-1:
     # provider : openstack-swift for v1 or openstack-swift-v3 for v3
     provider: openstack-swift-v3
