item 5519 : call async get object from IHM recette

--- a/vitam-conf-dev/conf/offer/default-storage.conf
+++ b/vitam-conf-dev/conf/offer/default-storage.conf
@@ -16,3 +16,60 @@ s3PathStyleAccessEnabled:
 s3AccessKey:
 s3SecretKey:
 s3SignerType:
+
+tapeLibraryConfiguration:
+  inputFileStorageFolder: "/vitam/data/offer/inputFiles"
+  inputTarStorageFolder: "/vitam/data/offer/inputTars"
+  outputTarStorageFolder: "/vitam/data/offer/outputTars"
+  maxTarEntrySize: 100000
+  maxTarFileSize: 1000000
+  useSudo: true
+
+  topology:
+    buckets:
+      test:
+        tenants: [0]
+        tarBufferingTimeoutInMinutes: 60
+      admin:
+        tenants: [1]
+        tarBufferingTimeoutInMinutes: 60
+      prod:
+        tenants: [2,3,4,5,6,7,8,9]
+        tarBufferingTimeoutInMinutes: 60
+
+  tapeLibraries:
+    TAPE_LIB_1:
+      robots:
+        -
+          device: /dev/tape/by-id/scsi-1QUANTUM_B4D282EF285E4365BBA90000
+          mtxPath: "/usr/sbin/mtx"
+          timeoutInMilliseconds: 3600000
+      drives:
+        -
+          index: 0
+          device: /dev/tape/by-id/scsi-1IBM_ULT3580-TD6_B4D2800001-nst
+          mtPath: "/bin/mt"
+          ddPath: "/bin/dd"
+          tarPath: "/bin/tar"
+          timeoutInMilliseconds: 3600000
+        -
+          index: 1
+          device: /dev/tape/by-id/scsi-1IBM_ULT3580-TD6_B4D2800002-nst
+          mtPath: "/bin/mt"
+          ddPath: "/bin/dd"
+          tarPath: "/bin/tar"
+          timeoutInMilliseconds: 3600000
+        -
+          index: 2
+          device: /dev/tape/by-id/scsi-1IBM_ULT3580-TD6_B4D2800003-nst
+          mtPath: "/bin/mt"
+          ddPath: "/bin/dd"
+          tarPath: "/bin/tar"
+          timeoutInMilliseconds: 3600000
+        -
+          index: 3
+          device: /dev/tape/by-id/scsi-1IBM_ULT3580-TD6_B4D2800004-nst
+          mtPath: "/bin/mt"
+          ddPath: "/bin/dd"
+          tarPath: "/bin/tar"
+          timeoutInMilliseconds: 3600000
