Add use of sudo to execute command configurable

--- a/sources/common/common-storage/src/test/resources/offer-tape-test.conf
+++ b/sources/common/common-storage/src/test/resources/offer-tape-test.conf
@@ -1,71 +1,59 @@
+inputFileStorageFolder: ""
+inputTarStorageFolder: ""
+outputTarStorageFolder: ""
+maxTarEntrySize: 100000
+maxTarFileSize: 1000000
+useSudo: true
+
 topology:
-    -
-        buckets:
-            -
-              default-bucket:
-                  -
-
-            -
-        containers:
-            - 0_object
-            - 1_object
-        nbThreads: 3
-    -
-        containers:
-            - 0_others
-            - 1_others
-            -
-
-tapeBatches:
-    -
-        containers:
-            - 0_object
-            - 1_object
-        nbThreads: 3
-    -
-        containers:
-            - 0_others
-            - 1_others
+  fileBuckets:
+    metadata: ['unit', 'objectGroup']
+    objects: ['object']
+    default: []
+  buckets:
+    test:
+      tenants: [0]
+      tarBufferingTimeoutInMinutes: 1
+    admin:
+      tenants: [1]
+      tarBufferingTimeoutInMinutes: 1
+    prod:
+      tenants: [2,3,4,5,6,7,8,9]
+      tarBufferingTimeoutInMinutes: 1
 
 tapeLibraries:
-    TAPE_LIB_1:
-        robots:
-            -
-                device: /dev/sg3
-                mtxPath: "/bin/mtx"
-            -
-                device: /dev/sg4
-        drives:
-            -
-                device: /dev/nst1
-                mtPath: "/bin/mt"
-                ddPath: "/bin/dd"
-                tarPath: "/bin/tar"
-                timeoutInMilliseconds: 60000
-            -
-                device: /dev/nst2
-                timeoutInMilliseconds: 40000
-            -
-                device: /dev/nst3
-                timeoutInMilliseconds: 20000
-            -
-                device: /dev/nst4
-
-    TAPE_LIB_2:
-        robots:
-            -
-                device: /dev/sg5
-            -
-                device: /dev/sg6
-        drives:
-            -
-                device: /dev/nst5
-            -
-                device: /dev/nst6
-            -
-                device: /dev/nst7
-            -
-                device: /dev/nst8
-
-inputTarStorageFolder: /tmp
-outputTarStorageFolder: /tmp
+  TAPE_LIB_1:
+    robots:
+      -
+        device: /dev/tape/by-id/scsi-1QUANTUM_B4D282EF285E4365BBA90000
+        mtxPath: "/usr/sbin/mtx"
+        timeoutInMilliseconds: 3600000
+    drives:
+      -
+        index: 0
+        device: /dev/tape/by-id/scsi-1IBM_ULT3580-TD6_B4D2800001-nst
+        mtPath: "/bin/mt"
+        ddPath: "/bin/dd"
+        tarPath: "/bin/tar"
+        timeoutInMilliseconds: 3600000
+      -
+        index: 1
+        device: /dev/tape/by-id/scsi-1IBM_ULT3580-TD6_B4D2800002-nst
+        mtPath: "/bin/mt"
+        ddPath: "/bin/dd"
+        tarPath: "/bin/tar"
+        timeoutInMilliseconds: 3600000
+      -
+        index: 2
+        device: /dev/tape/by-id/scsi-1IBM_ULT3580-TD6_B4D2800003-nst
+        mtPath: "/bin/mt"
+        ddPath: "/bin/dd"
+        tarPath: "/bin/tar"
+        timeoutInMilliseconds: 3600000
+      -
+        index: 3
+        device: /dev/tape/by-id/scsi-1IBM_ULT3580-TD6_B4D2800004-nst
+        mtPath: "/bin/mt"
+        ddPath: "/bin/dd"
+        tarPath: "/bin/tar"
+        timeoutInMilliseconds: 3600000
