--- a/sources/storage/cas-manager/cas-tape-library/src/test/resources/offer-tape-test.conf
+++ b/sources/storage/cas-manager/cas-tape-library/src/test/resources/offer-tape-test.conf
@@ -3,6 +3,7 @@ inputTarStorageFolder: ""
 outputTarStorageFolder: ""
 maxTarEntrySize: 100000
 maxTarFileSize: 1000000
+useSudo: true
 
 topology:
   fileBuckets:
