--- a/deployment/ansible-vitam/roles/vitam/tasks/tape_offer.yml
+++ b/deployment/ansible-vitam/roles/vitam/tasks/tape_offer.yml
@@ -3,7 +3,13 @@
 - name: Determine available groups
   getent:
     database: group
+    split: ':'
+    fail_key: False
 
-- name: add user vitam to tape group if this group exist
-  user: name="{{ vitam_defaults.users.vitam }}" groups="tape" append=yes
-  when: "tape" in ansible_facts.getent_group and  vitam_struct.vitam_component == "offer"
+- name: add user vitam to tape group if component is offer
+  user:
+    name: "{{ vitam_defaults.users.vitam }}"
+    groups: "tape" 
+    append: yes
+  when: "tape" in ansible_facts.getent_group and vitam_struct.vitam_component == "offer"
+# TODO OMA: maybe even more restrictive on conf_offer ?
