--- a/deployment/ansible-vitam/roles/vitam/tasks/tape_offer.yml
+++ b/deployment/ansible-vitam/roles/vitam/tasks/tape_offer.yml
@@ -11,5 +11,5 @@
     name: "{{ vitam_defaults.users.vitam }}"
     groups: "tape" 
     append: yes
-  when: "tape" in ansible_facts.getent_group and vitam_struct.vitam_component == "offer"
+  when: ("tape" in getent_group) and (vitam_struct.vitam_component == "offer")
 # TODO OMA: maybe even more restrictive on conf_offer ?
