Fix dev conf (reset to filesystem defaults)

--- a/vitam-conf-dev/conf/offer/offer-tape.conf
+++ b/vitam-conf-dev/conf/offer/offer-tape.conf
@@ -3,9 +3,10 @@ inputTarStorageFolder: "/vitam/data/offer/inputTars"
 outputTarStorageFolder: "/vitam/data/offer/outputTars"
 maxTarEntrySize: 100000
 maxTarFileSize: 1000000
+
 topology:
   fileBuckets:
-    metadata: ['units', 'objectGroup']
+    metadata: ['unit', 'objectGroup']
     objects: ['object']
     default: []
   buckets:
