Fix reindexation and fix preservation-es-mapping

--- a/sources/functional-administration/functional-administration-common/src/main/resources/preservationscenario-es-mapping.json
+++ b/sources/functional-administration/functional-administration-common/src/main/resources/preservationscenario-es-mapping.json
@@ -66,10 +66,10 @@
                   "type": "text"
                 },
                 "FilteredExtractedObjectGroupData": {
-                  "type": "object"
+                  "type": "text"
                 },
                 "FilteredExtractedUnitData": {
-                  "type": "object"
+                  "type": "text"
                 }
 
               }
