--- a/sources/pom.xml
+++ b/sources/pom.xml
@@ -155,6 +155,7 @@
         <hibernate-validator.version>6.0.0.Final</hibernate-validator.version>
         <org.glassfish.web.version>2.2.6</org.glassfish.web.version>
         <javax.el-api.version>3.0.0</javax.el-api.version>
+        <retrofit2.version>2.5.0</retrofit2.version>
 
         <nodeDownloadRoot/>
     </properties>
@@ -1470,13 +1471,13 @@
             <dependency>
                 <groupId>com.squareup.retrofit2</groupId>
                 <artifactId>retrofit</artifactId>
-                <version>2.6.0-SNAPSHOT</version>
+                <version>${retrofit2.version}</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>com.squareup.retrofit2</groupId>
                 <artifactId>converter-jackson</artifactId>
-                <version>2.6.0-SNAPSHOT</version>
+                <version>${retrofit2.version}</version>
                 <scope>test</scope>
             </dependency>
 
