Be able to set logstash jvm memory

--- a/deployment/environments/group_vars/all/cots_vars.yml
+++ b/deployment/environments/group_vars/all/cots_vars.yml
@@ -53,6 +53,9 @@ logstash:
     user: logstash
     port: 10514
     rest_port: 20514
+    # logstash xms & xmx in Megabytes
+    # jvm_xms: 2048
+    # jvm_xmx: 2048
 
 # Curator units: days
 curator:
