--- a/sources/storage-integration-test/pom.xml
+++ b/sources/storage-integration-test/pom.xml
@@ -119,7 +119,7 @@
         <dependency>
             <groupId>fr.gouv.vitam</groupId>
             <artifactId>logbook-administration</artifactId>
-            <version>2.6.0-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 </project>
