Fix so no link between security-internal & elasticsearch-data when checking ES state

--- a/deployment/ansible-vitam/roles/init_contexts_and_security_profiles/tasks/check_elasticsearch.yml
+++ b/deployment/ansible-vitam/roles/init_contexts_and_security_profiles/tasks/check_elasticsearch.yml
@@ -10,4 +10,5 @@
   until: result.json.status == "green"
   retries: "{{ vitam_defaults.services.api_call_timeout }}"
   delay: 10
+  delegate_to: "{{ groups['hosts-elasticsearch-data']|first }}"
   run_once: true
