--- a/deployment/ansible-vitam/roles/elasticsearch-cluster/tasks/main.yml
+++ b/deployment/ansible-vitam/roles/elasticsearch-cluster/tasks/main.yml
@@ -37,17 +37,29 @@
 
 #### Elasticsearch installation ####
 
-# Only prerequisite for Debian : install openjdk from jessie-backports
-
-- name: install openjdk from jessie-backports (prerequisite for cerebro) only when Debian
+# Only prerequisite for Debian : install openjdk from stretch-backports
+- name: "install openjdk from {{ ansible_distribution_release }}-backports only when Debian (prerequisite for elasticsearch package)"
   apt:
     name: "{{ item }}"
     state: latest
-    default_release: jessie-backports
+    default_release: "{{ ansible_distribution_release }}-backports"
   with_items:
     - ca-certificates-java
     - openjdk-8-jre-headless
-  when: ansible_os_family == "Debian"
+  when:
+    - ansible_os_family == "Debian"
+    - disable_internet_repositories_install == false
+
+- name: "install openjdk only when Debian (prerequisite for elasticsearch package)"
+  apt:
+    name: "{{ item }}"
+    state: latest
+  with_items:
+    - ca-certificates-java
+    - openjdk-8-jre-headless
+  when:
+    - ansible_os_family == "Debian"
+    - disable_internet_repositories_install == true
 
 - name: install vitam-{{composant.cluster_name}} package
   package:
