--- a/deployment/ansible-vitam/roles/logstash/tasks/main.yml
+++ b/deployment/ansible-vitam/roles/logstash/tasks/main.yml
@@ -12,15 +12,28 @@
     state: latest
   when: ansible_os_family == "RedHat"
 
-- name: install openjdk from jessie-backports (prerequisite for cerebro) only when Debian
+- name: "install openjdk from {{ ansible_distribution_release }}-backports only when Debian"
   apt:
     name: "{{ item }}"
     state: latest
-    default_release: jessie-backports
+    default_release: "{{ ansible_distribution_release }}-backports"
   with_items:
     - ca-certificates-java
     - openjdk-8-jre-headless
-  when: ansible_os_family == "Debian"
+  when:
+    - ansible_os_family == "Debian"
+    - disable_internet_repositories_install == false
+
+- name: "install openjdk only when Debian"
+  apt:
+    name: "{{ item }}"
+    state: latest
+  with_items:
+    - ca-certificates-java
+    - openjdk-8-jre-headless
+  when:
+    - ansible_os_family == "Debian"
+    - disable_internet_repositories_install == true
 
 - name: Install logstash package from repo
   package:
