--- a/deployment/ansible-vitam/roles/vitam/tasks/main.yml
+++ b/deployment/ansible-vitam/roles/vitam/tasks/main.yml
@@ -1,15 +1,30 @@
 ---
 
 # FIXME : will need more testing to be sure it is mandatory here
-- name: install openjdk from jessie-backports (prerequisite for cerebro) only when Debian
+- name: "install openjdk from {{ ansible_distribution_release }}-backports only when Debian"
   apt:
     name: "{{ item }}"
     state: latest
-    default_release: jessie-backports
+    default_release: "{{ ansible_distribution_release }}-backports"
   with_items:
     - ca-certificates-java
     - openjdk-8-jre-headless
-  when: ansible_os_family == "Debian"
+  when:
+    - ansible_os_family == "Debian"
+    - disable_internet_repositories_install == false
+
+- name: "install openjdk only when Debian"
+  apt:
+    name: "{{ item }}"
+    state: latest
+  with_items:
+    - ca-certificates-java
+    - openjdk-8-jre-headless
+  when:
+    - ansible_os_family == "Debian"
+    - disable_internet_repositories_install == true
+
+- import_tasks: tape_offer.yml
 
 
 # state: latest to handle snapshot versions
