Fixed logbook client bug for ihm-demo

--- a/deployment/ansible-vitam/roles/mongo_common/tasks/main.yml
+++ b/deployment/ansible-vitam/roles/mongo_common/tasks/main.yml
@@ -80,3 +80,4 @@
     name: disable_transparent_hugepages.service
     enabled: yes
     state: started
+  when: ansible_virtualization_type != 'docker'
