--- a/deployment/ansible-vitam/roles/normalize-host/tasks/main.yml
+++ b/deployment/ansible-vitam/roles/normalize-host/tasks/main.yml
@@ -36,9 +36,4 @@
     - script
     - tmp
 
-- include_tasks: centos.yml
-  when: ansible_os_family == "RedHat"
-
-# No openjdk8 without jessie-backports with debian
-- include_tasks: debian.yml
-  when: ansible_os_family == "Debian"
+- import_tasks: epel.yml
