--- a/deployment/environments/group_vars/all/vitam_vars.yml
+++ b/deployment/environments/group_vars/all/vitam_vars.yml
@@ -122,6 +122,7 @@ vitam:
         logback_rolling_policy: true
         logback_max_file_size: "10MB"
         logback_total_size_cap: "5GB"
+        performance_logger: "false"
     accessinternal:
         vitam_component: access-internal
         host: "access-internal.service.{{ consul_domain }}"
@@ -135,6 +136,7 @@ vitam:
         logback_rolling_policy: true
         logback_max_file_size: "10MB"
         logback_total_size_cap: "5GB"
+        performance_logger: "false"
     functional_administration:
         vitam_component: functional-administration
         host: "functional-administration.service.{{ consul_domain }}"
@@ -149,6 +151,7 @@ vitam:
         logback_rolling_policy: true
         logback_max_file_size: "10MB"
         logback_total_size_cap: "5GB"
+        performance_logger: "false"
     elastickibanainterceptor:
         vitam_component: elastic-kibana-interceptor
         host: "elastic-kibana-interceptor.service.{{ consul_domain }}"
@@ -163,6 +166,7 @@ vitam:
         logback_rolling_policy: true
         logback_max_file_size: "10MB"
         logback_total_size_cap: "5GB"
+        performance_logger: "false"
     ingestexternal:
         vitam_component: ingest-external
         # DNS record for the service:
@@ -191,6 +195,7 @@ vitam:
         logback_rolling_policy: true
         logback_max_file_size: "10MB"
         logback_total_size_cap: "5GB"
+        performance_logger: "false"
     ingestinternal:
         vitam_component: ingest-internal
         host: "ingest-internal.service.{{ consul_domain }}"
@@ -204,6 +209,7 @@ vitam:
         logback_rolling_policy: true
         logback_max_file_size: "10MB"
         logback_total_size_cap: "5GB"
+        performance_logger: "false"
     ihm_demo:
         vitam_component: "ihm-demo"
         host: "ihm-demo.service.{{ consul_domain }}"
@@ -236,6 +242,7 @@ vitam:
         logback_rolling_policy: true
         logback_max_file_size: "10MB"
         logback_total_size_cap: "5GB"
+        performance_logger: "false"
     logbook:
         vitam_component: logbook
         host: "logbook.service.{{ consul_domain }}"
@@ -259,6 +266,7 @@ vitam:
         logback_rolling_policy: true
         logback_max_file_size: "10MB"
         logback_total_size_cap: "5GB"
+        performance_logger: "false"
     metadata:
         vitam_component: metadata
         host: "metadata.service.{{ consul_domain }}"
@@ -273,6 +281,7 @@ vitam:
         logback_rolling_policy: true
         logback_max_file_size: "10MB"
         logback_total_size_cap: "5GB"
+        performance_logger: "false"
     processing:
         vitam_component: processing
         host: "processing.service.{{ consul_domain }}"
@@ -286,6 +295,7 @@ vitam:
         logback_rolling_policy: true
         logback_max_file_size: "10MB"
         logback_total_size_cap: "5GB"
+        performance_logger: "false"
     security_internal:
         vitam_component: security-internal
         host: "security-internal.service.{{ consul_domain }}"
@@ -299,6 +309,7 @@ vitam:
         logback_rolling_policy: true
         logback_max_file_size: "10MB"
         logback_total_size_cap: "5GB"
+        performance_logger: "false"
     storageengine:
         vitam_component: storage
         host: "storage.service.{{ consul_domain }}"
@@ -314,6 +325,7 @@ vitam:
         logback_rolling_policy: true
         logback_max_file_size: "10MB"
         logback_total_size_cap: "5GB"
+        performance_logger: "false"
     storageofferdefault:
         vitam_component: "offer"
         port_service: 9900
@@ -326,6 +338,7 @@ vitam:
         logback_rolling_policy: true
         logback_max_file_size: "10MB"
         logback_total_size_cap: "5GB"
+        performance_logger: "false"
     worker:
         vitam_component: worker
         port_service: 9104
@@ -338,6 +351,7 @@ vitam:
         logback_rolling_policy: true
         logback_max_file_size: "10MB"
         logback_total_size_cap: "5GB"
+        performance_logger: "false"
     workspace:
         vitam_component: workspace
         host: "workspace.service.{{ consul_domain }}"
@@ -351,3 +365,4 @@ vitam:
         logback_rolling_policy: true
         logback_max_file_size: "10MB"
         logback_total_size_cap: "5GB"
+        performance_logger: "false"
